created home page

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.js' integrity='sha512-pmaEGtUAy7E5gRmwjLqQAD/QWw0dL4Z59b6b+2HQkqQwQ+HcPLLb9/KbUNo5zr10WuXmbivK9nYVZOyDkMgZMg==' crossorigin='anonymous'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js' integrity='sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw==' crossorigin='anonymous'></script>
+
 </head>
 <body>
     <div class="wrap">
-        <h1>admin page</h1>
+        <header>
+            <h1>admin page</h1>
+        </header>
+        <div class="newGoodsForm">
+            <input type="text" id="title">
+            <input type="number" id="price">
+            <button class="addGoods">add</button>
+        </div>
+      
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
